--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,6 @@ jobs:
         
       - name: Unit Test
         run: python -m unittest -v test
+        
+      - name: Unit Test
+        run: pip install random
