--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install Requirements
         run: pip install requests
         
+      - name: Install Requirements
+        run: pip install os
+        
       - name: Unit Test
         run: python -m unittest -v test
 
